# nolik-cli

./: .gitignore  Cargo.toml  README.md  metadata.scale
src/: account.rs  blacklist.rs  config.rs  constants.rs  errors.rs  flag_validation.rs  helpers.rs  lib.rs  main.rs  material.rs  menu.rs  owner.rs  pane.rs  ui.rs  wallet.rs  whitelist.rs
src/cli/: config.rs  constants.rs  errors.rs  input.rs  mod.rs  rules.rs
src/config/: errors.rs  mod.rs
src/inputs/: constants.rs  errors.rs  mod.rs  rules.rs
src/message/: batch.rs  blob.rs  data.rs  encryption.rs  entry.rs  errors.rs  file.rs  group.rs  index.rs  input.rs  ipfs.rs  message.rs  mod.rs  nonce.rs  otu.rs  party.rs  recipient.rs  save.rs  sender.rs  session.rs  utils.rs
src/node/: calls.rs  errors.rs  events.rs  extrinsics.rs  mod.rs  socket.rs
src/rpc/: calls.rs  extrinsics.rs  mod.rs
tests/: account.rs  blacklist.rs  inputs.rs  message.rs  owner.rs  wallet.rs  whitelist.rs
