[package]
name = "nolik-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.17"
crossterm = "0.22"
unicode-width = "0.1.5"

#codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
sp-core = "6.0.0"
sp-keyring = "6.0.0"
sp-runtime = "6.0.0"
parity-scale-codec = "3.1.2"

sodiumoxide = "0.2.7"
clipboard = "0.5.0"

reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
bs58 = "0.4.0"
hex = "0.4.3"