[package]
name = "nolik-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
sp-core = "6.0.0"
sp-keyring = "6.0.0"
sp-runtime = "6.0.0"
parity-scale-codec = "3.1.2"

sodiumoxide = "0.2.7"
clipboard = "0.5.0"

reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
bs58 = "0.4.0"
base64 = "0.13.0"
hex = "0.4.3"
#yaml-rust = "0.4.5"
dirs = "4.0.0"
toml = "0.5.8"
rpassword = "6.0.1"
rand = "0.8.5"
blake2 = "0.10.4"