[package]
name = "nolik-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
sp-core = "6.0.0"
sp-keyring = "6.0.0"
sp-runtime = "6.0.0"
sp-std = "4.0.0"
parity-scale-codec = "3.1.2"
frame-metadata = "15.0.0"

sodiumoxide = "0.2.7"
clipboard = "0.5.0"
subxt = "0.22.0"
tungstenite = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
async-trait = "0.1.57"
futures = "0.3.21"
futures-util = "0.3.21"
async-recursion = "1.0.0"
ipfs-api-backend-hyper = "0.4"
bs58 = "0.4.0"
base64 = "0.13.0"
hex = "0.4.3"
dirs = "4.0.0"
toml = "0.5.8"
rpassword = "6.0.1"
rand = "0.8.5"
blake2 = "0.10.4"
clearscreen = "1.0.6"
num-format = "0.4.0"
colored = "2.0.0"
crossterm = "0.25.0"